# caishen-lambda

./: .gitignore  AUTHORS.rst  CHANGELOG.md  LICENSE  LICENSE.txt  Makefile  README.md  README.rst  requirements-dev.txt  requirements-lambda.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: PR.yml  develop.yml  main.yml
caishen_lambda/: initial_load.py
docs/: conf.py  index.rst
docs/api/: lambda.rst
lambda/: incremental_load.py  initial_load.py
tests/: conftest.py
